Fixxed scaling bugs with the who we are page on small screens

--- a/app/assets/stylesheets/components/_employee_index_card.scss
+++ b/app/assets/stylesheets/components/_employee_index_card.scss
@@ -47,9 +47,9 @@
   justify-content: center;
   align-items: start;
   width: 100%;
-  min-width: 180px;
+  min-width: 144px;
   img {
-    min-width: 180px;
-    min-height: 180px;
+    min-width: 144px;
+    min-height: 144px;
   }
 }
